# aimo-proof-pilot

./: .env.example  .gitignore  Dockerfile  PRIME_RL_BATCHING_NOTES.md  README.md  docker_authorized_keys  docker_ssh_entrypoint.sh  proof_pilot_train_20260703.def  requirements.txt
beaker/: Dockerfile  README.md  build_and_push.sh  entrypoint.sh  experiment.yaml.template  prepare_assets.sh
data/: astral-bench.csv  hmmt_feb_2026.csv  imo_data_1959_2024.csv  proofbench_v2.csv  proofbench_v3.csv
docs/: prime_rl_opd.md  prime_rl_sft.md
operator_commands/: convert_phase2_phase3_nvfp4_8gpu_upload.sh  convert_phase3_step15_nvfp4_upload_modelopt.sh  hotfix_start_remote_shell_daemon.sh  phase1_32b_tp8_pp3_seq65536.sh  phase2_32b_tp8_pp3_seq65536.sh  prime_rl_opd_1node_raw_ctx81920_1000steps_g8.sh  prime_rl_opd_1node_raw_smoke.sh  prime_rl_opd_3node_full_vocab_dpsk_ctx81920_nodes345.sh  prime_rl_opd_4xh200_muon_imo_ctx16384_2train_1policy_1teacher.sh  prime_rl_opd_4xh200_muon_testcsv_async_ctx8192_cp1_10step.sh  prime_rl_opd_5xh200_full_vocab_dpsk_ctx24576_2train_1policy_2teacher.sh  prime_rl_opd_8node_full_vocab_dpsk_ctx81920_nodes345.sh  prime_rl_sft_8node_per_turn_ctx131072.sh
scripts/: README.md  analyze_nemotron_math_proofs_v2.py  bench_vllm_olmo3sink_speed.py  build_docker.sh  build_sif_and_upload.sh  build_sif_e2e.sh  operator_client.py
src/: aime_2026.csv  build_vllm_wheel.sh  cuda_config.sh  install_magi_attention.sh  install_modal_simp_extras.sh  install_prime_node_env.sh  (+12 more)
src/proof_opd_env/: README.md  astralbench.csv  proof_opd_env.py  pyproject.toml  test.csv
(+18 files in other folders)
