[project]
name = "proof-opd-env"
description = "An environment for proof env codebase"
tags = ["proof", "llm", "math"]
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "git+https://github.com/PrimeIntellect-ai/verifiers.git",
    "datasets",
    "openai"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["proof_opd_env.py"]


